--- a/index.html
+++ b/index.html
@@ -16,37 +16,56 @@
     <title>News Homepage</title>
   </head>
   <body>
-    <header>
-      <div class="logo"><img src="assets/images/logo.svg" alt="" /></div>
-      <nav>
-        <ul class="nav__items">
-          <!-- <img
+    <div class="app">
+      <header>
+        <div class="logo"><img src="assets/images/logo.svg" alt="" /></div>
+        <nav>
+          <ul class="nav__items">
+            <!-- <img
             src="./assets//images/icon-menu-close.svg"
             alt=""
             class="close"
             aria-hidden="true"
           /> -->
-          <li><a href="#">Home</a></li>
-          <li><a href="#">New</a></li>
-          <li><a href="#">Popular</a></li>
-          <li><a href="#">Trending</a></li>
-          <li><a href="#">Categories</a></li>
-        </ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">New</a></li>
+            <li><a href="#">Popular</a></li>
+            <li><a href="#">Trending</a></li>
+            <li><a href="#">Categories</a></li>
+          </ul>
 
-        <!-- <img
+          <!-- <img
           src="./assets//images//icon-menu.svg"
           alt=""
           class="hamburger"
           aria-hidden="true"
         /> -->
-      </nav>
-    </header>
+        </nav>
+      </header>
 
-    <main class="hero">
-      <div class="container">
-        <section class="main"></section>
-        <section class="sidebar"></section>
-      </div>
-    </main>
+      <main id="hero">
+        <div class="container">
+          <section class="main">
+            <img
+              src="/assets/images/image-web-3-desktop.jpg"
+              alt=""
+              class="main__img"
+            />
+            <div class="main__content">
+              <h3 class="main__title">The Bright Future Of Web 3.0?</h3>
+              <div class="main__textcontent">
+                <p class="main__textcontent__parag">
+                  We dive into the next evolution of the web that claims to put
+                  the power of the platforms back into the hands of the people.
+                  But is it really fulfilling its promise?
+                </p>
+                <div><button class="action__btn">read more</button></div>
+              </div>
+            </div>
+          </section>
+          <section class="sidebar"></section>
+        </div>
+      </main>
+    </div>
   </body>
 </html>
