main section for the desktop done

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         </nav>
       </header>
 
-      <main id="hero">
+      <main>
         <div class="container">
           <section class="main">
             <img
@@ -63,7 +63,25 @@
               </div>
             </div>
           </section>
-          <section class="sidebar"></section>
+          <section class="sidebar">
+            <div class="hero__rightside">
+              <h1 class="hero__rightside_title">New</h1>
+              <div class="news__stories">
+                <div class="story">
+                  <h4>Hydrogen VS Electric Cars</h4>
+                  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+                </div>
+                <div class="story">
+                  <h4>Hydrogen VS Electric Cars</h4>
+                  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+                </div>
+                <div class="story">
+                  <h4>Hydrogen VS Electric Cars</h4>
+                  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+                </div>
+              </div>
+            </div>
+          </section>
         </div>
       </main>
     </div>
