--- a/index.html
+++ b/index.html
@@ -44,11 +44,22 @@
       <main>
         <div class="container">
           <section class="main">
-            <img
-              src="/assets/images/image-web-3-desktop.jpg"
-              alt=""
-              class="main__img"
-            />
+            <picture>
+              <source
+                media="(min-width: 660px)"
+                srcset="./assets/images/image-web-3-desktop.jpg"
+              />
+              <source
+                media="(max-width: 600px)"
+                srcset="./assets/images/image-web-3-mobile.jpg"
+              />
+              <img
+                src="./assets//images//image-web-3-mobile.jpg"
+                alt="a cute kitten"
+                class="main__img"
+              />
+            </picture>
+
             <div class="main__content">
               <h3 class="main__title">The Bright Future Of Web 3.0?</h3>
               <div class="main__textcontent">
@@ -70,12 +81,18 @@
                   <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
                 </div>
                 <div class="story">
-                  <h4>Hydrogen VS Electric Cars</h4>
-                  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+                  <h4>The Downsides of AI Artistry</h4>
+                  <p>
+                    What are the possible adverse effects of on-demand AI image
+                    generation?
+                  </p>
                 </div>
                 <div class="story">
-                  <h4>Hydrogen VS Electric Cars</h4>
-                  <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+                  <h4>Is VC Funding Drying Up?</h4>
+                  <p>
+                    Private funding by VC firms is down 50% YOY. We take a look
+                    at what that means
+                  </p>
                 </div>
               </div>
             </div>
