re-building: hero section styling done

--- a/version2/index.html
+++ b/version2/index.html
@@ -25,5 +25,46 @@
         </nav>
       </div>
     </div>
+
+    <!-- Hero -->
+    <section class="hero">
+      <div class="container grid">
+        <div class="main">
+          <img src="../assets/images/image-web-3-desktop.jpg" alt="" />
+          <div class="main-context grid">
+            <h1>The Bright Future Of Web 3.0?</h1>
+            <div class="main-text flex">
+              <p>
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni
+                quis doloremque vero, natus, itaque cum, incidunt debitis
+                mollitia quam facilis dolorem fuga
+              </p>
+              <button>Read More</button>
+            </div>
+          </div>
+        </div>
+        <div class="sidebar">
+          <h2>New</h2>
+          <div class="new">
+            <h5>Lorem ipsum dolor sit amet.</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            </p>
+          </div>
+          <div class="new">
+            <h5>Lorem ipsum dolor sit amet.</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            </p>
+          </div>
+          <div class="new">
+            <h5>Lorem ipsum dolor sit amet.</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
