section Brief news at the bottom done

--- a/version2/index.html
+++ b/version2/index.html
@@ -66,5 +66,41 @@
         </div>
       </div>
     </section>
+
+    <!-- Brief news -->
+    <section class="briefs">
+      <div class="container flex">
+        <div class="brief-news flex">
+          <img src="../assets/images/image-gaming-growth.jpg" alt="" />
+          <div class="briefs-text flex">
+            <h3>01</h3>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus,
+            </p>
+          </div>
+        </div>
+        <div class="brief-news flex">
+          <img src="../assets/images/image-top-laptops.jpg" alt="" />
+          <div class="briefs-text flex">
+            <h3>02</h3>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus,
+            </p>
+          </div>
+        </div>
+        <div class="brief-news flex">
+          <img src="../assets/images/image-retro-pcs.jpg" alt="" />
+          <div class="briefs-text flex">
+            <h3>03</h3>
+            <h5>Lorem ipsum dolor.</h5>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus,
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
