Styling for tablet version

--- a/version2/index.html
+++ b/version2/index.html
@@ -29,7 +29,7 @@
     <!-- Hero -->
     <section class="hero">
       <div class="container grid">
-        <div class="main">
+        <div class="main flex">
           <img src="../assets/images/image-web-3-desktop.jpg" alt="" />
           <div class="main-context grid">
             <h1>The Bright Future Of Web 3.0?</h1>
